--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+    <form action=""> 
+        <input type="text" id="numeroKm" placeholder="km">
+        <input type="text" id="age" placeholder="eta">
+        <button onclick="generaPrezzo(); return false">Calcola il Prezzo</button>
+    </form>  
 
     <h2 id="costoBiglietto"></h2>
     
